# docs/swagger.json
@@ -416,6 +416,122 @@
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
+                    "409": {
+                        "description": "Конфликт при создании кинозала",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/halls/by-screen-type": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Возвращает список залов с указанным типом экрана.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Кинозалы"
+                ],
+                "summary": "Получить залы по типу экрана",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID типа экрана",
+                        "name": "screen_type_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список найденных кинозалов",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Hall"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат ID типа экрана",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Залы не найдены",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/halls/search": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Возвращает список залов, названия которых содержат указанную строку.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Кинозалы"
+                ],
+                "summary": "Поиск залов по названию",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Строка для поиска",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список найденных кинозалов",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Hall"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Строка поиска пуста",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Залы не найдены",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Ошибка сервера",
                         "schema": {
@@ -533,6 +649,12 @@
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
+                    "409": {
+                        "description": "Конфликт при обновлении кинозала",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Ошибка сервера",
                         "schema": {
@@ -579,6 +701,12 @@
                     },
                     "404": {
                         "description": "Данные не найдены",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Конфликт при удалении кинозала",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
